Fix for bug 464067 (memory leak while running SVG reftests). r/sr=jst.